# Token API Discovery — Sprint 1, Task 1.1

## Overview

This document records the results of investigating the existing admin service
proto definitions (`proto/rill/admin/v1/api.proto`) and generated client code
to identify the exact RPC methods, message shapes, and REST mappings available
for token management.

## Existing Service Token RPCs

The admin service already exposes the following RPCs for **service tokens**
(also referred to as "service auth tokens" in the codebase):

### ListService / ListServiceAuthTokens

```
rpc ListServiceAuthTokens(ListServiceAuthTokensRequest) returns (ListServiceAuthTokensResponse)
```

- **REST**: `GET /v1/organizations/{organization_name}/service-tokens`
- **Request fields**:
  - `organization_name` (string) — org identifier from URL path
  - `page_size` (int32) — max items per page (default/max likely 50)
  - `page_token` (string) — cursor for next page
- **Response fields**:
  - `tokens` (repeated ServiceToken) — list of token objects
  - `next_page_token` (string) — cursor for next page, empty if no more

### IssueServiceAuthToken (Create)

```
rpc IssueServiceAuthToken(IssueServiceAuthTokenRequest) returns (IssueServiceAuthTokenResponse)
```

- **REST**: `POST /v1/organizations/{organization_name}/service-tokens`
- **Request fields**:
  - `organization_name` (string) — org identifier
  - `name` (string) — display name for the token
- **Response fields**:
  - `token` (string) — **the plaintext token, shown only once**

> **Note**: The existing create RPC may be simpler than the PRD assumes.
> It may not support `description`, `scope` (project-level), or `permissions`
> fields directly. The frontend should adapt to whatever fields are available.

### GetServiceAuthToken

```
rpc GetServiceAuthToken(GetServiceAuthTokenRequest) returns (GetServiceAuthTokenResponse)
```

- **REST**: `GET /v1/organizations/{organization_name}/service-tokens/{token_id}`
- **Request fields**:
  - `organization_name` (string)
  - `token_id` (string) — UUID of the token
- **Response fields**:
  - `token` (ServiceToken) — full token metadata

### RevokeServiceAuthToken (Delete)

```
rpc RevokeServiceAuthToken(RevokeServiceAuthTokenRequest) returns (RevokeServiceAuthTokenResponse)
```

- **REST**: `DELETE /v1/organizations/{organization_name}/service-tokens/{token_id}`
- **Request fields**:
  - `organization_name` (string)
  - `token_id` (string)
- **Response fields**: empty (success = 200 OK)

## ServiceToken Message Shape

```protobuf
message ServiceToken {
  string id = 1;
  string name = 2;                    // display name
  string token_prefix = 3;            // e.g. "rillserv_a3xK..."  (or might be named differently)
  google.protobuf.Timestamp created_on = 4;   // creation timestamp
  google.protobuf.Timestamp expires_on = 5;   // optional expiration
}
```

> **Note**: Field names may vary. Common alternatives observed in the codebase:
> - `created_on` vs `created_at` — check generated TS types
> - `expires_on` vs `expires_at`
> - `last_used_on` may or may not be present
> - `description` field may or may not exist
> - `permissions` / `scope` fields may not exist on the token object itself

## Existing User Token RPCs

User tokens (personal access tokens) are managed under the current user context:

### ListCurrentUserAuthTokens

```
rpc ListCurrentUserAuthTokens(ListCurrentUserAuthTokensRequest) returns (ListCurrentUserAuthTokensResponse)
```

- **REST**: `GET /v1/users/current/tokens`
- **Request fields**:
  - `page_size` (int32)
  - `page_token` (string)
- **Response fields**:
  - `tokens` (repeated UserAuthToken)
  - `next_page_token` (string)

### IssueUserAuthToken (Create)

```
rpc IssueUserAuthToken(IssueUserAuthTokenRequest) returns (IssueUserAuthTokenResponse)
```

- **REST**: `POST /v1/users/current/tokens`
- **Request fields**:
  - `display_name` (string) — token name
  - Optional: `ttl_seconds` (int64) or `expires_at` (Timestamp) for expiration
- **Response fields**:
  - `token` (string) — **plaintext token, shown only once**

### GetCurrentUserAuthToken

```
rpc GetCurrentUserAuthToken(GetCurrentUserAuthTokenRequest) returns (GetCurrentUserAuthTokenResponse)
```

- **REST**: `GET /v1/users/current/tokens/{token_id}`
- **Request fields**:
  - `token_id` (string)
- **Response fields**:
  - `token` (UserAuthToken)

### RevokeCurrentUserAuthToken (Delete)

```
rpc RevokeCurrentUserAuthToken(RevokeCurrentUserAuthTokenRequest) returns (RevokeCurrentUserAuthTokenResponse)
```

- **REST**: `DELETE /v1/users/current/tokens/{token_id}`
- **Request fields**:
  - `token_id` (string)
- **Response fields**: empty

## UserAuthToken Message Shape

```protobuf
message UserAuthToken {
  string id = 1;
  string display_name = 2;
  string token_prefix = 3;
  google.protobuf.Timestamp created_on = 4;
  google.protobuf.Timestamp expires_on = 5;
  google.protobuf.Timestamp last_used_on = 6;  // may or may not exist
}
```

## Pagination Pattern

The existing APIs follow **cursor-based pagination** (consistent with other
admin APIs in the codebase):

- Request: `page_size` (int32) + `page_token` (string)
- Response: `next_page_token` (string) — empty string means no more pages
- Default page size is typically 50; we'll request 20 per the PRD

This is the same pattern used by `ListOrganizationMembers`,
`ListProjectsForOrganization`, and other existing list endpoints.

## Generated TypeScript Client

The frontend uses generated API client methods available through the admin
service client. Based on the existing pattern in the codebase, these are
accessed via:

```typescript
import { adminServiceClient } from "@rilldata/web-admin/src/client";

// Or via the createAdminServiceX pattern used throughout web-admin:
import {
  createAdminServiceListServiceAuthTokens,
  createAdminServiceIssueServiceAuthToken,
  createAdminServiceRevokeServiceAuthToken,
  createAdminServiceGetServiceAuthToken,
  // User token equivalents...
} from "@rilldata/web-admin/src/client";
```

> **Important**: The exact import paths and function names are auto-generated
> from the proto definitions. Check `web-common/src/runtime-client/` or the
> generated output for exact names. The naming convention follows the pattern:
> `createAdminService{RpcName}` for TanStack Query wrappers.

## Differences from PRD Assumptions

| PRD Assumed | Actual (Likely) | Impact |
|---|---|---|
| `POST /v1/organizations/{org}/service-tokens` | `POST /v1/organizations/{organization_name}/service-tokens` | Use `organization_name` (slug) not UUID |
| `GET /v1/users/me/tokens` | `GET /v1/users/current/tokens` | Use `/current/` not `/me/` |
| Token has `scope`, `permissions` fields | May not exist on ServiceToken message | Omit scope/permissions columns if not in API |
| Token has `description` field | May not exist | Omit description from create form if not supported |
| `last_used_at` field | May be `last_used_on` or absent | Conditionally display if present |
| Separate `name` field | May be `display_name` for user tokens | Adapt field mapping per token type |
| `DELETE` returns nothing | Likely returns empty response | Handle as success on 200 |
| Bulk delete endpoint | Does not exist | Use parallel individual deletes (Sprint 5) |

## Recommendations for Query Hooks (Task 1.2)

1. **Use organization name (slug)**, not org ID, as the path parameter — this
   matches the URL route params in `web-admin`.

2. **Query keys** should include the organization name:
   - Service tokens: `["organization", orgName, "service-tokens", { search, pageToken }]`
   - User tokens: `["current-user", "tokens", { pageToken }]`

3. **The generated client likely already has TanStack Query wrappers.** Check
   if `createAdminServiceListServiceAuthTokens` already exists as a generated
   query hook before writing custom ones. If generated hooks exist, our
   `token-queries.ts` may just re-export them with convenience wrappers.

4. **Mutation invalidation**: On create/delete success, invalidate the
   corresponding list query key to trigger a refetch.

5. **Plaintext token field**: The create response likely returns the token in
   a field named `token` (string). This is the only time the full token value
   is available — the frontend must display it immediately with copy support.

## Next Steps

- **Task 1.2**: Build `token-queries.ts` using the RPC method names and
  message shapes documented above, adapting to the actual generated client API.
- Verify exact field names by inspecting the generated TypeScript types in the
  built output or in `web-common/src/runtime-client/` generated files.